<resources>
    <string name="app_name">Parkado</string>
    <string name="title_activity_maps">Map</string>


    <!-- Buttons -->
    <string name="ch_button">Start Chathead</string>
    <string name="looking_for_text">Looking for a spot?</string>
    <string name="parked_text">Parked?</string>
    <string name="leaving_text">Or leaving?</string>
    <string name="where_text">Where is my car?</string>


    <!-- Dialogs -->
    <string name="perm_chathead">To use the floating interface Parkado needs permission to overwrite screen content.</string>
    <string name="perm_location">Parkado needs to access the user location.</string>
    <string name="perm_sms">Parkado needs permission to sends SMS.</string>


    <!-- Toasts/Snackbars -->
    <string name="perm_chathead_denied">Having denied permission Parkado can not show the floating interface.</string>
    <string name="perm_location_denied">Having denied permission Parkado can not acquire user location.</string>
    <string name="perm_sms_denied">Having denied permission Parkado can not send SMS.</string>
    <string name="error_googleapi">Sorry there was an error with Google services. Please restart Parkado.</string>
    <string name="error_geocode">Sorry there was an error with retrieving your address.</string>
    <string name="enable_gps">Please enable GPS and try again.</string>
    <string name="error_splash_screen">Oops! Looks like there is little problem..</string>
    <string name="toast_saving_park">Parkado is saving your parking location!</string>

    <!-- Other Interface Elements -->
    <string name="map_marker">Your car location</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home" translatable="false">ActivityHome</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="sttings_intro_card_title">Parkado Settings</string>
    <string name="settings_intro_card_text">Please take a moment to customize Parkado. Enter the kind of car you use and any contact you would like to be notified when the car is parked.</string>
    <string name="nav_free">Free spots</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="parked">Parked</string>

    <string name="home_intro_card_title">Welcome to Parkado!</string>
    <string name="home_intro_card_text">Parkado can relieve  the stress of parking in the city! Please take a moment to discover the app.</string>
    <string name="toast_leaving">Thank you for signaling Parkado the free spot!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_mail">Please insert a valid email address</string>
    <string name="error_pwd">Please insert a password with more than 8 characters</string>
    <string name="log_out">Log Out</string>
    <string name="google_sign_in">Or Sign In with Google</string>
    <string name="error_google_atuh">There was a problem with the Google Sign In</string>
    <string name="car_not_set">Please set up car details in Parkado settings and retry!</string>
    <string name="sttings_options_card_title">Options</string>
    <string name="settings_sms_card_text">Select a contact who will be notified via SMS when you park your car. Currently selected:</string>
    <string name="settings_car_type_card_text">Set the type of car you are drving.</string>
    <string name="set_car_button">Set Car</string>
    <string name="set_sms_button">Set SMS</string>
    <string name="remove_sms_button">Remove</string>
    <string name="car_not_found">Parkado could not find any parked car</string>
    <string name="error_firebase_db">Ooops! Parkado could not reach its cloud database!</string>
    <string name="error_auth">Oops! There was a problem with your uthentication. Please Sign In again.</string>
    <string name="parkado_user">Parkado User</string>
    <string name="settings_sms_contact_text">No contact selected</string>
    <string name="settings_car_type_error">Please select a car type to continue</string>
    <string name="settings_car_type_ok">Successful car type selection!</string>
    <string name="settings_sms_contact_ok">Successful contact selection!</string>
    <string name="map_marker_mins">minutes ago</string>


    <string-array name="car_type_array">
        <item> </item>
        <item>City car</item>
        <item>Sedan</item>
        <item>SUV</item>
    </string-array>


</resources>
