<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="100dp"
    android:elevation="5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="#ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/looking_for_text"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/looking_for_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/parking_sign"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parked_text"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/park_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/parked"
                android:padding="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaving_text"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"/>
            <ImageView
                android:id="@+id/leave_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/automobile"
                android:padding="5dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>